@@ -9,19 +9,20 @@
 package org.sosy_lab.cpachecker.cfa.parser.eclipse.c;
 
 import static com.google.common.base.Preconditions.checkArgument;
+import static org.sosy_lab.cpachecker.cfa.parser.eclipse.c.EclipseCdtWrapper.wrapCode;
+import static org.sosy_lab.cpachecker.cfa.parser.eclipse.c.EclipseCdtWrapper.wrapFile;
 
+import com.google.common.base.CharMatcher;
 import com.google.common.base.Function;
 import com.google.common.base.Preconditions;
 import com.google.common.base.Strings;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.Iterators;
 import com.google.common.collect.Lists;
-import com.google.common.io.MoreFiles;
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.Charset;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
@@ -35,18 +36,7 @@ import org.eclipse.cdt.core.dom.ast.IASTPreprocessorIncludeStatement;
 import org.eclipse.cdt.core.dom.ast.IASTProblem;
 import org.eclipse.cdt.core.dom.ast.IASTStatement;
 import org.eclipse.cdt.core.dom.ast.IASTTranslationUnit;
-import org.eclipse.cdt.core.dom.ast.gnu.c.GCCLanguage;
-import org.eclipse.cdt.core.dom.parser.c.ANSICParserExtensionConfiguration;
-import org.eclipse.cdt.core.dom.parser.c.ICParserExtensionConfiguration;
-import org.eclipse.cdt.core.index.IIndexFileLocation;
-import org.eclipse.cdt.core.model.ILanguage;
 import org.eclipse.cdt.core.parser.FileContent;
-import org.eclipse.cdt.core.parser.IParserLogService;
-import org.eclipse.cdt.core.parser.IScannerInfo;
-import org.eclipse.cdt.internal.core.parser.IMacroDictionary;
-import org.eclipse.cdt.internal.core.parser.InternalParserUtil;
-import org.eclipse.cdt.internal.core.parser.scanner.InternalFileContent;
-import org.eclipse.cdt.internal.core.parser.scanner.InternalFileContentProvider;
 import org.eclipse.core.runtime.CoreException;
 import org.sosy_lab.common.ShutdownNotifier;
 import org.sosy_lab.common.log.LogManager;
@@ -62,14 +52,10 @@ import org.sosy_lab.cpachecker.cfa.parser.Scope;
 import org.sosy_lab.cpachecker.cfa.types.MachineModel;
 import org.sosy_lab.cpachecker.exceptions.CParserException;
 
-/**
- * Wrapper for Eclipse CDT 7.0 and 8.* (internal version number since 5.2.*)
- */
+/** Parser based on Eclipse CDT */
 class EclipseCParser implements CParser {
 
-  private final ILanguage language;
-
-  private final IParserLogService parserLog;
+  private final EclipseCdtWrapper eclipseCdt;
 
   private final MachineModel machine;
   private final LogManager logger;
@@ -89,44 +75,23 @@ class EclipseCParser implements CParser {
     machine = pMachine;
     options = pOptions;
     shutdownNotifier = pShutdownNotifier;
-    parserLog = new ShutdownNotifierLogAdapter(pShutdownNotifier);
 
-    switch (pOptions.getDialect()) {
-    case C99:
-      language = new CLanguage(new ANSICParserExtensionConfiguration());
-      break;
-    case GNUC:
-      language = GCCLanguage.getDefault();
-      break;
-    default:
-      throw new IllegalArgumentException("Unknown C dialect");
-    }
+    eclipseCdt = new EclipseCdtWrapper(pOptions, pShutdownNotifier);
   }
 
   /**
-   * Convert paths like "file.c" to "./file.c",
-   * and return all other patchs unchanged.
-   * The pre-processor of Eclipse CDT needs this to resolve relative includes.
+   * Convert paths like "file.c" to "./file.c", and return all other patchs unchanged. The
+   * pre-processor of Eclipse CDT needs this to resolve relative includes.
    */
-  private static String fixPath(String pPath) {
-    Path path = Paths.get(pPath);
+  private static Path fixPath(Path path) {
     if (!path.toString().isEmpty() && !path.isAbsolute() && path.getParent() == null) {
-      return Paths.get(".").resolve(path).toString();
+      return Path.of(".").resolve(path);
     }
-    return pPath;
-  }
-
-  private FileContent wrapCode(String pFileName, String pCode) {
-    return FileContent.create(pFileName, pCode.toCharArray());
-  }
-
-  private FileContent wrapFile(String pFileName) throws IOException {
-    String code = MoreFiles.asCharSource(Paths.get(pFileName), Charset.defaultCharset()).read();
-    return wrapCode(pFileName, code);
+    return path;
   }
 
   private interface FileParseWrapper {
-    FileContent wrap(String pFileName, FileToParse pContent) throws IOException;
+    FileContent wrap(Path pFileName, FileToParse pContent) throws IOException;
   }
 
   private ParseResult parseSomething(
@@ -140,7 +105,7 @@ class EclipseCParser implements CParser {
     Preconditions.checkNotNull(pSourceOriginMapping);
     Preconditions.checkNotNull(pWrapperFunction);
 
-    Map<String, String> fileNameMapping = new HashMap<>();
+    Map<Path, Path> fileNameMapping = new HashMap<>();
     for (FileToParse f : pInput) {
       fileNameMapping.put(fixPath(f.getFileName()), f.getFileName());
     }
@@ -152,7 +117,7 @@ class EclipseCParser implements CParser {
     List<IASTTranslationUnit> astUnits = new ArrayList<>(pInput.size());
 
     for (FileToParse f : pInput) {
-      final String fileName = fixPath(f.getFileName());
+      final Path fileName = fixPath(f.getFileName());
 
       try {
         astUnits.add(parse(pWrapperFunction.wrap(fileName, f), parseContext));
@@ -165,11 +130,11 @@ class EclipseCParser implements CParser {
   }
 
   @Override
-  public ParseResult parseFile(List<String> pFilenames)
+  public ParseResult parseFiles(List<String> pFilenames)
       throws CParserException, InterruptedException {
 
     return parseSomething(
-        Lists.transform(pFilenames, FileToParse::new),
+        Lists.transform(pFilenames, name -> new FileToParse(Path.of(name))),
         new CSourceOriginMapping(),
         CProgramScope.empty(),
         (pFileName, pContent) -> wrapFile(pFileName));
@@ -188,21 +153,12 @@ class EclipseCParser implements CParser {
           Preconditions.checkArgument(pContent instanceof FileContentToParse);
           return wrapCode(pFileName, ((FileContentToParse) pContent).getFileContent());
         });
-
-  }
-
-  /** This method parses a single file where no prefix for static variables is needed. */
-  @Override
-  public ParseResult parseFile(String pFileName)
-      throws CParserException, IOException, InterruptedException {
-
-    return parseFile(ImmutableList.of(pFileName));
   }
 
   /** This method parses a single string, where no prefix for static variables is needed. */
   @Override
   public ParseResult parseString(
-      String pFileName, String pCode, CSourceOriginMapping sourceOriginMapping, Scope pScope)
+      Path pFileName, String pCode, CSourceOriginMapping sourceOriginMapping, Scope pScope)
       throws CParserException, InterruptedException {
 
     return parseSomething(
@@ -218,25 +174,27 @@ class EclipseCParser implements CParser {
   private IASTStatement[] parseCodeFragmentReturnBody(String pCode)
       throws CParserException, InterruptedException {
     // parse
-    IASTTranslationUnit ast = parse(wrapCode("", pCode), ParseContext.dummy());
+    IASTTranslationUnit ast = parse(wrapCode(Path.of("fragment"), pCode), ParseContext.dummy());
 
     // strip wrapping function header
     IASTDeclaration[] declarations = ast.getDeclarations();
-    if (   declarations == null
+    if (declarations == null
         || declarations.length != 1
         || !(declarations[0] instanceof IASTFunctionDefinition)) {
       throw new CParserException("Not a single function: " + ast.getRawSignature());
     }
 
-    IASTFunctionDefinition func = (IASTFunctionDefinition)declarations[0];
+    IASTFunctionDefinition func = (IASTFunctionDefinition) declarations[0];
     IASTStatement body = func.getBody();
     if (!(body instanceof IASTCompoundStatement)) {
-      throw new CParserException("Function has an unexpected " + body.getClass().getSimpleName() + " as body: " + func.getRawSignature());
+      throw new CParserException(
+          "Function has an unexpected "
+              + body.getClass().getSimpleName()
+              + " as body: "
+              + func.getRawSignature());
     }
 
-    IASTStatement[] statements = ((IASTCompoundStatement)body).getStatements();
-
-    return statements;
+    return ((IASTCompoundStatement) body).getStatements();
   }
 
   private ASTConverter prepareTemporaryConverter(Scope scope) {
@@ -297,21 +255,20 @@ class EclipseCParser implements CParser {
     return nodeList;
   }
 
-  // we don't use IASTName#getImageLocation(), so the parser doesn't need to create them
-  protected static final int PARSER_OPTIONS = ILanguage.OPTION_NO_IMAGE_LOCATIONS;
-
   private IASTTranslationUnit parse(FileContent codeReader, ParseContext parseContext)
       throws CParserException, InterruptedException {
     parseTimer.start();
     try {
-      IASTTranslationUnit result = getASTTranslationUnit(codeReader);
+      IASTTranslationUnit result = eclipseCdt.getASTTranslationUnit(codeReader);
 
       // Separate handling of include problems
       // so that we can give a better error message.
       for (IASTPreprocessorIncludeStatement include : result.getIncludeDirectives()) {
         if (!include.isResolved()) {
           if (include.isSystemInclude()) {
-            throw new CFAGenerationRuntimeException("File includes system headers, either preprocess it manually or specify -preprocess.");
+            throw new CFAGenerationRuntimeException(
+                "File includes system headers, either preprocess it manually or specify"
+                    + " -preprocess.");
           } else {
             throw parseContext.parseError(
                 "Included file " + include.getName() + " is missing", include);
@@ -334,20 +291,13 @@ class EclipseCParser implements CParser {
     }
   }
 
-  private IASTTranslationUnit getASTTranslationUnit(FileContent pCode)
-      throws CFAGenerationRuntimeException, CoreException, InterruptedException {
-    try {
-      return language.getASTTranslationUnit(
-          pCode,
-          StubScannerInfo.instance,
-          FileContentProvider.instance,
-          null,
-          PARSER_OPTIONS,
-          parserLog);
-    } finally {
-      shutdownNotifier.shutdownIfNecessary();
-    }
-  }
+  private static final CharMatcher LEGAL_VAR_NAME_CHARACTERS =
+      // Taken from § 6.4.2.1 of C11
+      CharMatcher.is('_')
+          .or(CharMatcher.inRange('A', 'Z'))
+          .or(CharMatcher.inRange('a', 'z'))
+          .or(CharMatcher.inRange('0', '9'))
+          .precomputed();
 
   /**
    * Builds the cfa out of a list of pairs of translation units and their appropriate prefixes for
@@ -377,10 +327,9 @@ class EclipseCParser implements CParser {
       } else {
         for (IASTTranslationUnit ast : asts) {
           String staticVariablePrefix =
-              parseContext
-                  .mapFileNameToNameForHumans(ast.getFilePath())
-                  .replace("/", "_")
-                  .replaceAll("\\W", "_");
+              LEGAL_VAR_NAME_CHARACTERS
+                  .negate()
+                  .replaceFrom(parseContext.mapFileNameToNameForHumans(ast.getFilePath()), "_");
           builder.analyzeTranslationUnit(ast, staticVariablePrefix, pScope);
         }
       }
@@ -400,8 +349,8 @@ class EclipseCParser implements CParser {
    * string, if for example CPAchecker only uses one file (we expect the user to know its name in
    * this case).
    */
-  private Function<String, String> createNiceFileNameFunction(Collection<String> pFileNames) {
-    Iterator<String> fileNames = pFileNames.iterator();
+  private Function<String, String> createNiceFileNameFunction(Collection<Path> pFileNames) {
+    Iterator<String> fileNames = Iterators.transform(pFileNames.iterator(), Path::toString);
 
     if (pFileNames.size() == 1) {
       final String mainFileName = fileNames.next();
@@ -421,7 +370,7 @@ class EclipseCParser implements CParser {
       if (pos < 0) {
         commonPathPrefix = commonStringPrefix;
       } else {
-        commonPathPrefix = commonStringPrefix.substring(0, pos+1);
+        commonPathPrefix = commonStringPrefix.substring(0, pos + 1);
       }
 
       return pInput -> {
@@ -440,7 +389,6 @@ class EclipseCParser implements CParser {
     }
   }
 
-
   @Override
   public Timer getParseTime() {
     return parseTimer;
@@ -451,132 +399,26 @@ class EclipseCParser implements CParser {
     return cfaTimer;
   }
 
-
   /**
-   * Private class extending the Eclipse CDT class that is the starting point
-   * for using the parser.
-   * Supports choise of parser dialect.
-   */
-  @SuppressWarnings("unchecked")
-  private static class CLanguage extends GCCLanguage {
-
-    private final ICParserExtensionConfiguration parserConfig;
-
-    public CLanguage(ICParserExtensionConfiguration parserConfig) {
-      this.parserConfig = parserConfig;
-    }
-
-    @Override
-    protected ICParserExtensionConfiguration getParserExtensionConfiguration() {
-      return parserConfig;
-    }
-  }
-
-  /**
-   * Private class that tells the Eclipse CDT scanner that no macros and include
-   * paths have been defined externally.
-   */
-  protected static class StubScannerInfo implements IScannerInfo {
-
-    private static final ImmutableMap<String, String> MACROS;
-
-    static {
-      ImmutableMap.Builder<String, String> macrosBuilder = ImmutableMap.builder();
-
-      // _Static_assert(cond, msg) feature of C11
-      macrosBuilder.put("_Static_assert(c, m)", "");
-      // _Noreturn feature of C11
-      macrosBuilder.put("_Noreturn", "");
-
-      // These built-ins are defined as macros
-      // in org.eclipse.cdt.core.dom.parser.GNUScannerExtensionConfiguration.
-      // When the parser encounters their redefinition or
-      // some non-trivial usage in the code, we get parsing errors.
-      // So we redefine these macros to themselves in order to
-      // parse them as functions.
-      macrosBuilder.put("__builtin_constant_p", "__builtin_constant_p");
-      macrosBuilder.put("__builtin_types_compatible_p(t1,t2)", "__builtin_types_compatible_p(({t1 arg1; arg1;}), ({t2 arg2; arg2;}))");
-      macrosBuilder.put("__offsetof__", "__offsetof__");
-      macrosBuilder.put("__builtin_offsetof(t,f)", "__builtin_offsetof(((t){}).f)");
-      macrosBuilder.put("__func__", "\"__func__\"");
-      macrosBuilder.put("__FUNCTION__", "\"__FUNCTION__\"");
-      macrosBuilder.put("__PRETTY_FUNCTION__", "\"__PRETTY_FUNCTION__\"");
-
-      // For vararg handling there are some interesting macros that we could use available at
-      // https://web.archive.org/web/20160801170919/http://research.microsoft.com/en-us/um/redmond/projects/invisible/include/stdarg.h.htm
-      // However, without proper support in the analysis, these just make things worse.
-      // Cf. https://gitlab.com/sosy-lab/software/cpachecker/-/issues/711
-      // We need size of smallest addressable unit:
-      // macrosBuilder.put("_INTSIZEOF(n)", "((sizeof(n) + sizeof(int) - 1) & ~(sizeof(int) - 1))");
-      // macrosBuilder.put("__builtin_va_start(ap,v)", "(ap = (va_list)&v + _INTSIZEOF(v))");
-      // macrosBuilder.put("__builtin_va_arg(ap,t)", "*(t *)((ap += _INTSIZEOF(t)) -
-      // _INTSIZEOF(t))");
-      // macrosBuilder.put("__builtin_va_end(ap)", "(ap = (va_list)0)");
-
-      // But for now we just make sure that code with varargs can be parsed
-      macrosBuilder.put("__builtin_va_arg(ap,t)", "(t)__builtin_va_arg(ap)");
-
-      // specifying a GCC version >= 4.7 enables handling of 128-bit types in
-      // GCCScannerExtensionConfiguration
-      macrosBuilder.put("__GNUC__", "4");
-      macrosBuilder.put("__GNUC_MINOR__", "7");
-
-      MACROS = macrosBuilder.build();
-    }
-
-    protected final static IScannerInfo instance = new StubScannerInfo();
-
-    @Override
-    public Map<String, String> getDefinedSymbols() {
-      // the externally defined pre-processor macros
-      return MACROS;
-    }
-
-    @Override
-    public String[] getIncludePaths() {
-      return new String[0];
-    }
-  }
-
-  private static class FileContentProvider extends InternalFileContentProvider {
-
-    static final InternalFileContentProvider instance = new FileContentProvider();
-
-    @Override
-    public InternalFileContent getContentForInclusion(String pFilePath,
-        IMacroDictionary pMacroDictionary) {
-      return InternalParserUtil.createExternalFileContent(pFilePath,
-          InternalParserUtil.SYSTEM_DEFAULT_ENCODING);
-    }
-
-    @Override
-    public InternalFileContent getContentForInclusion(IIndexFileLocation pIfl,
-        String pAstPath) {
-      return InternalParserUtil.createFileContent(pIfl);
-    }
-  }
-
-  /**
-   * Wrapper for {@link CSourceOriginMapping} that does the reverse file-name mapping
-   * of {@link EclipseCParser#fixPath(String)}, otherwise file-name lookup fails
-   * and origin-source mapping does not work for files in the current directory
-   * that are not specified as "./foo.c" but only as "foo.c".
+   * Wrapper for {@link CSourceOriginMapping} that does the reverse file-name mapping of {@link
+   * EclipseCParser#fixPath(Path)}, otherwise file-name lookup fails and origin-source mapping does
+   * not work for files in the current directory that are not specified as "./foo.c" but only as
+   * "foo.c".
    */
   private static class FixedPathSourceOriginMapping extends CSourceOriginMapping {
 
     private final CSourceOriginMapping delegate;
-    private final ImmutableMap<String, String> fileNameMapping;
+    private final ImmutableMap<Path, Path> fileNameMapping;
 
-    FixedPathSourceOriginMapping(
-        CSourceOriginMapping pDelegate, Map<String, String> pFileNameMapping) {
+    FixedPathSourceOriginMapping(CSourceOriginMapping pDelegate, Map<Path, Path> pFileNameMapping) {
       delegate = pDelegate;
       fileNameMapping = ImmutableMap.copyOf(pFileNameMapping);
     }
 
     @Override
     public CodePosition getOriginLineFromAnalysisCodeLine(
-        final String pAnalysisFile, final int pAnalysisCodeLine) {
-      final String analysisFile = fileNameMapping.getOrDefault(pAnalysisFile, pAnalysisFile);
+        final Path pAnalysisFile, final int pAnalysisCodeLine) {
+      final Path analysisFile = fileNameMapping.getOrDefault(pAnalysisFile, pAnalysisFile);
 
       CodePosition result =
           delegate.getOriginLineFromAnalysisCodeLine(analysisFile, pAnalysisCodeLine);
